analyze type use package by default (#12)
* use jeps api ref

* cache

* keep going

* anno done

* simplify cfg

* cache

* ref

* use @SneakyThrows

* update spec

* update performAnalysis

* max

* use Runnable

* add comment

* add buildJdepsConfiguration

* use setCaseInsensitiveEnumValuesAllowed

* ref

* pretties

* add AnalyzerType

* ref

* bug

* analyze done

* shrink start

* half

* cfg

* add comment

* add ShrinkResult

* shrink done

* printShrinkResult done

* rm unused md

* done

* done

* add applicationDefaultJvmArgs

* analyze type use package by default